--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.5.8",
     "mongoose": "^5.9.16",
+    "multer": "^1.4.2",
     "password-validator": "^5.0.3",
     "validator": "^13.0.0"
   },
