--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mongoose": "^5.9.16",
     "multer": "^1.4.2",
     "password-validator": "^5.0.3",
+    "sharp": "^0.25.3",
     "validator": "^13.0.0"
   },
   "devDependencies": {
